k8s/hello-java/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-java
  namespace: hello
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: hello-java
    app.kubernetes.io/instance: hello-java
