k8s/hello-java/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-java
  namespace: hello
spec:
  ingressClassName: nginx
  rules:
    - host: aksjavahelena.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /hello-java
            pathType: Prefix
            backend:
              service:
                name: hello-java
                port:
                  number: 8080
